--- a/lobebin.html
+++ b/lobebin.html
@@ -34,6 +34,11 @@
     overflow-y: auto;
         }
 
+        .scrollable {
+    overflow-y: auto;
+    max-height: 90vh;
+}
+
         .search-container {
             max-width: 800px;
             margin: 2% auto;
@@ -291,6 +296,19 @@ fetchData();
             menu.style.display = 'block';
         }
     }
+
+        function checkOverflow() {
+    const container = document.getElementById('dataContainer');
+    
+    if (container.scrollHeight > container.clientHeight) {
+        container.classList.add('scrollable');
+    } else {
+        container.classList.remove('scrollable');
+    }
+}
+
+// ... After you toggle the display of a code block or make any other changes...
+checkOverflow();
     </script>
 
 </body>
