--- a/lobebin.html
+++ b/lobebin.html
@@ -32,6 +32,7 @@
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
     max-height: 80vh;
     overflow-y: auto;
+            box-sizing: border-box;
         }
 
         .scrollable {
