--- a/lobebin.html
+++ b/lobebin.html
@@ -19,7 +19,7 @@
         body {
             font-family: 'Arial', sans-serif;
             background-color: #f0f0f0;
-            overflow: hidden;
+            overflow: auto;
             color: #333;
         }
 
