--- a/lobebin.html
+++ b/lobebin.html
@@ -116,7 +116,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #2D2D2D; /* Dark Background */
+    background-color: #00000000; /* Dark Background */
     padding: 10px 5%;
     border-bottom: 1px solid #718096;
 }
