--- a/lobebin.html
+++ b/lobebin.html
@@ -202,17 +202,17 @@ body::-ms-scrollbar {
         <div class="nav-logo">lobe</div>
         <div class="nav-items">
             <div class="nav-item" onclick="window.location.href='https://strich.org'">Home</div>
-            <div class="nav-item" onclick="window.location.href='https://strich.org/status'">Status</div>
-            <div class="nav-item" onclick="window.location.href='https://strich.org/lobebin'">LobeBin</div>
+            <div class="nav-item" onclick="window.location.href='https://strich.org/discord'">Discord</div>
+            <div class="nav-item" onclick="">Status</div>
         </div>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
     </div>
 
     <!-- Popup Menu -->
     <div class="popup-menu">
-        <a href="https://strich.org/discord" class="popup-item">Discord</a>
-        <div class="popup-item disabled">Snippets</div>
-        <div class="popup-item disabled">Apps</div>
+        <a href="https://strich.org" class="popup-item">Home</a>
+        <div class="https://discord.gg/HWKpn8NT4R">Discord</div>
+        <div class="popup-item disabled">Status</div>
     </div>
 
     <div class="search-container">
