--- a/lobebin.html
+++ b/lobebin.html
@@ -51,7 +51,7 @@
             transition: background-color 0.3s;
             border: 1px solid #718096;
             outline: none;
-            color: #A0AEC0;
+            color: #E2E8F0;
             background-color: #4A5568;
         }
 .searchBar:hover {
