--- a/lobebin.html
+++ b/lobebin.html
@@ -202,7 +202,7 @@ body::-ms-scrollbar {
         <div class="nav-logo">lobe</div>
         <div class="nav-items">
             <div class="nav-item" onclick="window.location.href='https://strich.org'">Home</div>
-            <div class="nav-item" onclick="window.location.href='https://strich.org/discord'">Discord</div>
+            <div class="nav-item" onclick="window.location.href='https://discord.gg/HWKpn8NT4R'">Discord</div>
             <div class="nav-item" onclick="">Status</div>
         </div>
         <div class="menu-icon" onclick="toggleMenu()">☰</div>
