--- a/status.html
+++ b/status.html
@@ -31,6 +31,8 @@
             background-color: #4A5568;
             border-radius: 15px;
             padding: 10px;
+            font-size: 1.2rem;
+            color: #E2E8F0;
         }
 
         .status {
@@ -76,10 +78,28 @@
         .nav-item:hover {
             color: #E2E8F0;
         }
+
+            .gradient-background {
+  background: linear-gradient(300deg,#4a5568,#000000,#2c3e50,#000000);
+  background-size: 240% 240%;
+  animation: gradient-animation 24s ease infinite;
+}
+
+@keyframes gradient-animation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
     </style>
 </head>
 
-<body>
+<body class="gradient-background">
 
     <!-- Navbar -->
     <div class="navbar">
