--- a/status.html
+++ b/status.html
@@ -55,7 +55,7 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            background-color: #2D3748; /* Dark Background */
+            background-color: #00; /* Dark Background */
             padding: 10px 5%;
         }
 
@@ -103,7 +103,7 @@
 
     <!-- Navbar -->
     <div class="navbar">
-        <div class="nav-logo">Lobe</div>
+        <div class="nav-logo">lobe</div>
         <div class="nav-items">
             <div class="nav-item" onclick="window.location.href='https://strich.org'">Home</div>
             <div class="nav-item" onclick="window.location.href='https://discord.gg/HWKpn8NT4R'">Discord</div>
