--- a/status.html
+++ b/status.html
@@ -33,6 +33,7 @@
             padding: 10px;
             font-size: 1.2rem;
             color: #E2E8F0;
+            border: 1px solid #718096;
         }
 
         .status {
@@ -41,6 +42,7 @@
             background-color: #4A5568;
             padding: 15px;
             border-radius: 15px;
+            border: 1px solid #718096;
         }
 
         .online {
