--- a/lobebin.html
+++ b/lobebin.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LobeBin GitHub Data Viewer</title>
+    <title>LobeBin</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
@@ -211,7 +211,7 @@ body::-ms-scrollbar {
     <!-- Popup Menu -->
     <div class="popup-menu">
         <a href="https://strich.org" class="popup-item">Home</a>
-        <div class="https://discord.gg/HWKpn8NT4R">Discord</div>
+        <div href="https://discord.gg/HWKpn8NT4R" class="popup-item">Discord</div>
         <div class="popup-item disabled">Status</div>
     </div>
 
