--- a/lobebin.html
+++ b/lobebin.html
@@ -210,7 +210,7 @@ body::-ms-scrollbar {
 
     <!-- Popup Menu -->
     <div class="popup-menu">
-        <a href="https://strich.org" class="popup-item">Home</a>
+        <div href="https://strich.org" class="popup-item">Home</div>
         <div href="https://discord.gg/HWKpn8NT4R" class="popup-item">Discord</div>
         <div class="popup-item disabled">Status</div>
     </div>
