--- a/guides/html.html
+++ b/guides/html.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LobeBin</title>
+    <title>lobe - HTML Guide</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/themes/prism-tomorrow.css" rel="stylesheet" />
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 
@@ -72,13 +72,13 @@
             background-color: #2C3E50; /* On hover, darken a bit */
         }
 
-        .entry-title {
+        h1 {
             font-size: 1.2rem;
             color: #E2E8F0;
             margin-bottom: 10px;
         }
 
-        .entry-description {
+        p {
             color: #A0AEC0;
             margin-bottom: 20px;
         }
