--- a/guides/html.html
+++ b/guides/html.html
@@ -78,7 +78,18 @@
             margin-bottom: 10px;
         }
 
+        h2 {
+            font-size: 0.8rem;
+            color: #E2E8F0;
+            margin-bottom: 10px;
+        }
+
         p {
+            color: #A0AEC0;
+            margin-bottom: 20px;
+        }
+
+        div {
             color: #A0AEC0;
             margin-bottom: 20px;
         }
