--- a/guides/html.html
+++ b/guides/html.html
@@ -243,7 +243,7 @@ body::-ms-scrollbar {
 <body class="gradient-background">
 
     <div class="navbar">
-        <div class="nav-logo">Ultimate Web Development Guide</div>
+        <div class="nav-logo">lobe</div>
     </div>
 
     <div class="container">
