--- a/guides/html.html
+++ b/guides/html.html
@@ -472,20 +472,6 @@ body::-ms-scrollbar {
                 <!-- More on CSS selectors can continue here... -->
             </div>
 
-            <!-- CSS Properties -->
-            <div class="subsection">
-                <h2>CSS Properties</h2>
-                <div class="example">
-                    <div class="example-title">Setting Background and Font Size</div>
-                    <pre><code class="language-css">body {
-    background-color: #f0f0f0;
-    font-size: 16px;
-}</code></pre>
-                </div>
-                <!-- More on CSS properties can continue here... -->
-            </div>
-        </div>
-
         <!-- JavaScript Section -->
         <div class="section">
             <h1>JavaScript</h1>
@@ -493,6 +479,52 @@ body::-ms-scrollbar {
                 JavaScript is the scripting language used to create and control dynamic website content.
             </p>
 
+            
+            <!-- JavaScript Basics -->
+<div class="subsection">
+    <h2>Variables & Data Types</h2>
+    <div class="example">
+        <div class="example-title">Variable Declaration</div>
+        <pre><code class="language-javascript">
+let name = "John";
+const PI = 3.14;
+var age = 30;
+        </code></pre>
+    </div>
+    <div class="example">
+        <div class="example-title">Data Types</div>
+        <pre><code class="language-javascript">
+let stringType = "Hello World";   // String
+let numberType = 100;             // Number
+let booleanType = true;           // Boolean
+let nullType = null;              // Null
+let undefinedType;                // Undefined
+let objectType = {firstName: "John", lastName: "Doe"}; // Object
+        </code></pre>
+    </div>
+</div>
+
+<div class="subsection">
+    <h2>Functions & Control Structures</h2>
+    <div class="example">
+        <div class="example-title">Function Declaration</div>
+        <pre><code class="language-javascript">
+function greet(name) {
+    return "Hello, " + name;
+}
+        </code></pre>
+    </div>
+    <div class="example">
+        <div class="example-title">If-Else Statement</div>
+        <pre><code class="language-javascript">
+if (age &gt; 18) {
+    console.log("You are an adult.");
+} else {
+    console.log("You are a minor.");
+}
+        </code></pre>
+    </div>
+</div>
             <!-- JavaScript Variables -->
             <div class="subsection">
                 <h2>Variables</h2>
