--- a/guides/html.html
+++ b/guides/html.html
@@ -469,8 +469,21 @@ body::-ms-scrollbar {
         </code></pre>
     </div>
 </div>
-                <!-- More on CSS selectors can continue here... -->
+
+            
+            <!-- CSS Properties -->
+            <div class="subsection">
+                <h2>CSS Properties</h2>
+                <div class="example">
+                    <div class="example-title">Setting Background and Font Size</div>
+                    <pre><code class="language-css">body {
+    background-color: #f0f0f0;
+    font-size: 16px;
+}</code></pre>
+                </div>
+                <!-- More on CSS properties can continue here... -->
             </div>
+        </div>
 
         <!-- JavaScript Section -->
         <div class="section">
