--- a/guides/html.html
+++ b/guides/html.html
@@ -327,6 +327,48 @@ body::-ms-scrollbar {
         </code></pre>
     </div>
 </div>
+                <!-- Tables in HTML -->
+<div class="subsection">
+    <h2>HTML Tables</h2>
+    <p>Tables allow for the display of data in rows and columns.</p>
+    <div class="example">
+        <div class="example-title">Basic Table Structure</div>
+        <pre><code class="language-html">
+&lt;table border="1"&gt;
+    &lt;thead&gt;
+        &lt;tr&gt;
+            &lt;th&gt;Header 1&lt;/th&gt;
+            &lt;th&gt;Header 2&lt;/th&gt;
+        &lt;/tr&gt;
+    &lt;/thead&gt;
+    &lt;tbody&gt;
+        &lt;tr&gt;
+            &lt;td&gt;Row1Col1&lt;/td&gt;
+            &lt;td&gt;Row1Col2&lt;/td&gt;
+        &lt;/tr&gt;
+    &lt;/tbody&gt;
+&lt;/table&gt;
+        </code></pre>
+    </div>
+</div>
+
+<!-- Semantics in HTML -->
+<div class="subsection">
+    <h2>HTML5 Semantics</h2>
+    <p>HTML5 introduced semantic elements that describe the content in a more detailed manner.</p>
+    <div class="example">
+        <div class="example-title">Article and Section Elements</div>
+        <pre><code class="language-html">
+&lt;article&gt;
+    &lt;section&gt;
+        &lt;h2&gt;Section Title&lt;/h2&gt;
+        &lt;p&gt;Content goes here...&lt;/p&gt;
+    &lt;/section&gt;
+&lt;/article&gt;
+        </code></pre>
+    </div>
+</div>
+
                 <!-- More HTML elements can continue here... -->
             </div>
 
