--- a/lobebin.html
+++ b/lobebin.html
@@ -192,6 +192,31 @@ body::-ms-scrollbar {
     width: 0;  /* for Internet Explorer and Edge */
 }
 
+        .pagination {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+}
+
+.pagination-btn {
+    padding: 10px 20px;
+    background-color: #4A5568; /* Default button color */
+    color: #E2E8F0;
+    border: none;
+    border-radius: 15px;
+    transition: background-color 0.3s;
+    cursor: pointer;
+}
+
+.pagination-btn:hover {
+    background-color: #2C3E50; /* On hover, darken a bit */
+}
+
+.pagination-btn:disabled {
+    cursor: not-allowed;
+    opacity: 0.5;
+}
+
     </style>
 </head>
 
@@ -219,10 +244,6 @@ body::-ms-scrollbar {
         <input class="searchBar" type="text" id="searchBar" placeholder="Search by title...">
     </div>
     <div class="container" id="dataContainer"></div>
-<div class="pagination">
-    <button id="prevBtn">Previous</button>
-    <button id="nextBtn">Next</button>
-</div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/prism.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-javascript.min.js"></script>
