--- a/lobebin.html
+++ b/lobebin.html
@@ -249,11 +249,14 @@ body::-ms-scrollbar {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.24.1/components/prism-javascript.min.js"></script>
 
     <script>
-        const container = document.getElementById('dataContainer');
+const container = document.getElementById('dataContainer');
 const searchBar = document.getElementById('searchBar');
+const prevButton = document.getElementById('prevButton');
+const nextButton = document.getElementById('nextButton');
+
 let allData = [];
-let currentPage = 1;
-const entriesPerPage = 5;
+let currentPage = 0;
+const itemsPerPage = 5;  // Display 5 items per page
 
 async function fetchData() {
     try {
@@ -273,22 +276,18 @@ async function fetchData() {
         }
 
         const publicData = allData.filter(item => item.status !== "private");
-        displayData(publicData, currentPage);
+        displayData(publicData.slice(currentPage * itemsPerPage, (currentPage + 1) * itemsPerPage));
 
+        updatePaginationButtons();
     } catch (error) {
         console.error('Error fetching data:', error);
     }
 }
 
-function displayData(data, page) {
+function displayData(data) {
     container.innerHTML = '';
-    
-    let start = (page - 1) * entriesPerPage;
-    let end = start + entriesPerPage;
 
-    const paginatedData = data.slice(start, end);
-
-    paginatedData.forEach(jsonData => {
+    data.forEach(jsonData => {
         const entryDiv = document.createElement('div');
         entryDiv.classList.add('entry');
         entryDiv.innerHTML = `
@@ -307,47 +306,54 @@ function displayData(data, page) {
         });
 
         entryDiv.querySelector('.code').addEventListener('click', (e) => {
-            e.stopPropagation();
-            const htmlFilePath = jsonData.filePath.replace('.json', '.html');
+            e.stopPropagation();  // Prevents the event from being detected by the parent element
+            const htmlFilePath = jsonData.filePath.replace('.json', '.html');  // Convert .json extension to .html
             window.location.href = `https://strich.org/${htmlFilePath}`;
         });
 
         container.appendChild(entryDiv);
     });
-
-    // Add pagination if there's more data to show
-    if (data.length > entriesPerPage) {
-        let prevButton = document.createElement('button');
-        prevButton.innerText = "Previous";
-        prevButton.onclick = function() {
-            if (currentPage > 1) {
-                currentPage--;
-                displayData(data, currentPage);
-            }
-        };
-
-        let nextButton = document.createElement('button');
-        nextButton.innerText = "Next";
-        nextButton.onclick = function() {
-            if (currentPage * entriesPerPage < data.length) {
-                currentPage++;
-                displayData(data, currentPage);
-            }
-        };
-
-        container.appendChild(prevButton);
-        container.appendChild(nextButton);
-    }
 }
 
 searchBar.addEventListener('input', (e) => {
     const searchValue = e.target.value.toLowerCase();
     const filteredData = allData.filter(item => 
         item.title.toLowerCase().includes(searchValue) || 
-        item.user.toLowerCase().includes(searchValue)
+        item.user.toLowerCase().includes(searchValue)  // This line checks the author's name
     );
-    currentPage = 1;  // Resetting the page when a new search is made
-    displayData(filteredData, currentPage);
+    currentPage = 0;  // Reset to the first page after filtering
+    displayData(filteredData.slice(currentPage * itemsPerPage, (currentPage + 1) * itemsPerPage));
+    updatePaginationButtons();
+});
+
+function updatePaginationButtons() {
+    const filteredData = allData.filter(item => 
+        item.title.toLowerCase().includes(searchBar.value.toLowerCase()) || 
+        item.user.toLowerCase().includes(searchBar.value.toLowerCase())  // This checks the author's name
+    );
+
+    prevButton.disabled = currentPage === 0;
+    nextButton.disabled = (currentPage + 1) * itemsPerPage >= filteredData.length;
+}
+
+prevButton.addEventListener('click', function() {
+    currentPage--;
+    const filteredData = allData.filter(item => 
+        item.title.toLowerCase().includes(searchBar.value.toLowerCase()) || 
+        item.user.toLowerCase().includes(searchBar.value.toLowerCase())
+    );
+    displayData(filteredData.slice(currentPage * itemsPerPage, (currentPage + 1) * itemsPerPage));
+    updatePaginationButtons();
+});
+
+nextButton.addEventListener('click', function() {
+    currentPage++;
+    const filteredData = allData.filter(item => 
+        item.title.toLowerCase().includes(searchBar.value.toLowerCase()) || 
+        item.user.toLowerCase().includes(searchBar.value.toLowerCase())
+    );
+    displayData(filteredData.slice(currentPage * itemsPerPage, (currentPage + 1) * itemsPerPage));
+    updatePaginationButtons();
 });
 
 fetchData();
@@ -360,6 +366,7 @@ function toggleMenu() {
         menu.style.display = 'block';
     }
 }
+
 
     </script>
 
