--- a/lobebin.html
+++ b/lobebin.html
@@ -353,12 +353,14 @@ nextButton.className = "pagination-btn";  // Ensure the class is assigned here
 searchBar.addEventListener('input', (e) => {
     const searchValue = e.target.value.toLowerCase();
     const filteredData = allData.filter(item => 
-        item.title.toLowerCase().includes(searchValue) || 
-        item.user.toLowerCase().includes(searchValue)
+        (item.title.toLowerCase().includes(searchValue) || 
+        item.user.toLowerCase().includes(searchValue)) &&
+        item.status !== "private"   // This will filter out the private entries
     );
     currentPage = 1;  // Resetting the page when a new search is made
     displayData(filteredData, currentPage);
 });
+
 
 fetchData();
 
